fix contrast on pricing grid

--- a/assets/sass/modules/content-blocks/_pricing.scss
+++ b/assets/sass/modules/content-blocks/_pricing.scss
@@ -63,7 +63,7 @@
             border-radius: 5px;
             padding: 10px;
             margin-top: 10px;
-            color: $color-white;
+            color: #271a1a;
             border: none;
           }
 
